--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "konva": "^9.3.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-konva": "^18.2.10"
   },
   "devDependencies": {
     "@types/node": "^20",
